# odoo-gold-pricing-engine

./: .env.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  __manifest__.py  env.example  pyproject.toml  requirements-dev.txt
.github/workflows/: deploy.yml
docs/: GITHUB_SECRETS_SETUP.md
gold_pricing/: __init__.py  __manifest__.py  utils.py
gold_pricing/data/: gold_pricing_cron.xml
gold_pricing/models/: __init__.py  account_move.py  account_move_line.py  diamond_price_service.py  gold_price_service.py  gold_pricing_config.py  pos_config.py  pos_make_payment.py  pos_order.py  pos_session.py  product_template.py
gold_pricing/report/: external_layout_footer.xml  external_layout_gold.xml  paperformat_gold.xml  report_external_layout_gold.xml  report_invoice_gold.xml
gold_pricing/security/: gold_pricing_security.xml  ir.model.access.csv
gold_pricing/tests/: __init__.py  test_cron.py  test_require_customer.py
gold_pricing/views/: account_move_views.xml  gold_pricing_config_views.xml  pos_config_views.xml  product_template_views.xml
jewellery_evaluator/: utils.py
jewellery_evaluator/data/: jewellery_evaluator_cron.xml
jewellery_evaluator/models/: __init__.py  account_move.py  account_move_line.py  diamond_price_service.py  gold_price_service.py  jewellery_evaluator_config.py  pos_make_payment.py  pos_order.py  pos_session.py  product_template.py  silver_price_service.py
jewellery_evaluator/report/: external_layout_footer.xml  (+2 more)
scripts/: backup-db.sh  ci.sh  ci_test.sh  delete_sales_and_invoices.py  deploy-local.sh  deploy.sh  install-git-hooks.sh  pre_deploy_check.sh  remote-deploy.sh  selenium_automation.py
tests/: __init__.py  conftest.py  test_bar_tier_markup.py  test_price_computation.py  test_price_parsing.py
(+16 files in other folders)
